# typst-template

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: check.yml
typst-template/: Cargo.toml  LICENSE  README.md
typst-template-derive/: Cargo.toml
typst-template-derive/src/: lib.rs
typst-template/src/: lib.rs  value.rs  world.rs
typst-template/src/convert/: chrono.rs  mod.rs  rust_decimal.rs  serde_json.rs  time.rs  uuid.rs
typst-template/tests/: convert.rs  derive.rs  e2e.rs  render.rs
