[workspace]
members = ["typst-template", "typst-template-derive"]
resolver = "2"

[workspace.package]
authors = ["Demiurg <developers@demiurg.hr>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/demiurg-dev/typst-template"
version = "0.1.1"

[workspace.dependencies]
# Internal
typst-template-derive = { version = "0.1.1", path = "typst-template-derive" }

# Typst
typst = "0.14"
typst-kit = { version = "0.14", default-features = false, features = ["embed-fonts", "fonts"] }
typst-pdf = "0.14"

# Proc-macro
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# Optional ecosystem integrations
chrono = "0.4"
chrono-tz = "0.10"
rust_decimal = "1"
serde_json = "1"
time = { version = "0.3", features = ["local-offset"] }
time-tz = "2"
uuid = "1"
